# scraper_job_offer_Chuwi

./: README.md  pyproject.toml
src/scraper_job_offfer/: __init__.py
