[tool.poetry]
name = "scraper-job-offer"
version = "0.1.0"
description = ""
authors = ["Chuwi12 <srpc9682@protonmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
requests = "^2.32.3"
beautifulsoup4 = "^4.13.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
